--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/springboot_quartz
 logging.path=/opt/logs/quartz-job/
 logging.file=quartz-job
 logging.config=classpath:logback-spring.xml
-#sql log£®µ˜ ‘”√£©
+#SQL log
 #logging.level.com.example.quartz.dao=debug
 
 #job datasource
